# fi-tk

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
configs/: example.toml
fitk/: __init__.py  frequency_index.py  visualise.py
fitk/utils/: __init__.py  clients.py  config.py  picks.py
seisfreq/: __init__.py  ctl.py  frequency_index.py  visualise.py
seisfreq/utils/: __init__.py  archive.py  config.py  errors.py  event.py  io.py  picks.py
