[project]
name = "seisfreq"
version = "0.1.0"
description = "A collection of utilities for frequency analysis in seismology."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "multitaper",
    "numpy",
    "obspy",
    "polars",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
seisfreqctl = "seisfreq.ctl:cli"

[project.optional-dependencies]
dev = ["ruff", "ipython", "pre-commit"]
docs = ["Sphinx >= 1.8.1", "docutils"]
cameras = ["imageio"]

[project.urls]
GitHub = "https://github.com/AVERT-System/nodectl"
Issues = "https://github.com/AVERT-System/nodectl/issues"

[tool.ruff]
line-length = 88
