[project]
name = "fitk"
version = "0.1.0"
description = "A small toolkit for frequency index analysis in seismology."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Conor A. Bacon" }]

dependencies = [
    "matplotlib",
    "multitaper",
    "numpy",
    "obspy",
    "polars",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["ruff", "ipython", "pre-commit"]

[project.urls]
GitHub = "https://github.com/hemmelig/fi-tk"
Issues = "https://github.com/hemmelig/fi-tk/issues"

[tool.ruff]
line-length = 88
